test/valid/return.js
function () { 
function f(x) { return; }
var y = f(2);
}
